--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "date-fns": "^3.3.1",
+    "google-map-react": "^2.2.1",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
