--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-google-charts": "^4.0.1",
     "react-leaflet": "^4.2.1",
     "react-scroll": "^1.9.0",
+    "react-share": "^5.1.0",
     "react-slick": "^0.30.1",
     "react-youtube": "^10.1.0",
+    "reactstrap": "^9.2.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
