--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-google-charts": "^4.0.1",
     "react-leaflet": "^4.2.1",
+    "react-paginate": "^8.2.0",
     "react-scroll": "^1.9.0",
     "react-share": "^5.1.0",
     "react-slick": "^0.30.1",
