--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,15 @@ version: '3'
 services:
   agi-frontpage-web:
     container_name: agi-frontpage-web-app
-    image: agi-frontpage-web
+    image: ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_VERSION}
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - '3033:80'
+      - ${DOCKER_PORT}:3000
     networks:
       - avrist-network
 networks:
   avrist-network:
-    driver: 'bridge'
+    external: true
+    name: 'avrist_network'
