--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,18 @@
 version: '3'
 services:
-  agi-frontpage-web:
-    container_name: agi-frontpage-web-app
-    image: ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_VERSION}
+  avrist-frontpage-web:
+    container_name: avrist-frontpage-web-app
+    image: avrist-frontpage-web
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: .                          
+      dockerfile: Dockerfile  
     ports:
-      - ${DOCKER_PORT}:3000
+      - "3031:80"
+    volumes:
+      - ./nginx/conf/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - avrist-network
 networks:
   avrist-network:
-    external: true
-    name: 'avrist_network'
+    driver: 'bridge'
