--- a/.env
+++ b/.env
@@ -1,8 +1,13 @@
-NEXT_PUBLIC_ENV=sit
-NEXT_PUBLIC_IMAGE_API=https://api-admin-sit.avristcms.barito.tech/api-cms/files/get
+### UAT ###
+NEXT_PUBLIC_ENV=uat
+NEXT_PUBLIC_IMAGE_API=https://stgweb.avristgeneral.com/api-cms/files/get
 NEXT_PUBLIC_PROVIDER_API=https://adev.avrist.com/provider/api/v1/user/providers
-NEXT_PUBLIC_AVRAS_API=https://api-front-sit.avristcms.barito.tech
-NEXT_PUBLIC_AVRAS_URL=http://front-sit.avristcms.barito.tech
-NEXT_PUBLIC_AGI_URL=http://front-sit-agi.avristcms.barito.tech
-NEXT_PUBLIC_AVRAM_URL=http://front-sit-avram.avristcms.barito.tech
-NEXT_PUBLIC_UPLOAD_FILE_URL=https://api-admin-sit.avristcms.barito.tech
+NEXT_PUBLIC_AVRAS_API=https://stgweb.avristgeneral.com/api-front
+NEXT_PUBLIC_AVRAS_URL=https://stgweb.avristgeneral.com
+NEXT_PUBLIC_AGI_URL=https://avristgeneral.com
+NEXT_PUBLIC_AVRAM_URL=https://avrist-am.com
+NEXT_PUBLIC_UPLOAD_FILE_URL=https://stgweb.avristgeneral.com
+
+DOCKER_IMAGE_NAME=agi-frontpage-web-uat
+DOCKER_IMAGE_VERSION=0.0.1
+DOCKER_PORT=3033
