ACW2-0000: test fixing uat

--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ NEXT_PUBLIC_AVRAS_URL=http://stgweb.avristgeneral.com
 NEXT_PUBLIC_AGI_URL=https://avristgeneral.com
 NEXT_PUBLIC_AVRAM_URL=https://avrist-am.com
 NEXT_PUBLIC_UPLOAD_FILE_URL=http://stgweb.avristgeneral.com
+NEXT_PUBLIC_REVALIDATE_CACHE=100
 
 DOCKER_IMAGE_NAME=agi-frontpage-web-uat
 DOCKER_IMAGE_VERSION=0.0.1
