ACW2-0000: add prod env and change agi image to latest in docker

--- a/.env.uat
+++ b/.env.uat
@@ -9,5 +9,5 @@ NEXT_PUBLIC_AVRAM_URL=https://avrist-am.com
 NEXT_PUBLIC_UPLOAD_FILE_URL=http://stgweb.avristgeneral.com
 
 DOCKER_IMAGE_NAME=agi-frontpage-web-uat
-DOCKER_IMAGE_VERSION=0.0.1
+DOCKER_IMAGE_VERSION=latest
 DOCKER_PORT=3033
