ACW2-5285: Implement Google Analytics, Google Tag & Update metdata

--- a/.env.prod
+++ b/.env.prod
@@ -7,6 +7,8 @@ NEXT_PUBLIC_AVRAS_URL=http://avrist.com
 NEXT_PUBLIC_AGI_URL=https://avristgeneral.com
 NEXT_PUBLIC_AVRAM_URL=https://avrist-am.com
 NEXT_PUBLIC_UPLOAD_FILE_URL=http://pilot.avristgeneral.com
+# Google ID
+NEXT_PUBLIC_GOOGLE_ID=G-SK0KEBL2WF
 
 DOCKER_IMAGE_NAME=agi-frontpage-web-prod
 DOCKER_IMAGE_VERSION=1.1.3
