--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@next/third-parties": "^14.2.15",
     "date-fns": "^3.3.1",
     "google-map-react": "^2.2.1",
     "leaflet": "^1.9.4",
-    "next": "^14.2.7",
+    "next": "^14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-charts": "^4.0.1",
