ACW2-5285: Implement Google Analytics, Google Tag & Update metdata

--- a/.env.sit
+++ b/.env.sit
@@ -6,3 +6,5 @@ NEXT_PUBLIC_AVRAS_URL=http://front-sit.avristcms.barito.tech
 NEXT_PUBLIC_AGI_URL=http://front-sit-agi.avristcms.barito.tech
 NEXT_PUBLIC_AVRAM_URL=http://front-sit-avram.avristcms.barito.tech
 NEXT_PUBLIC_UPLOAD_FILE_URL=https://api-admin-sit.avristcms.barito.tech
+# Google ID
+NEXT_PUBLIC_GOOGLE_ID=GTM-WXMTM8CR
