--- a/.env.uat
+++ b/.env.uat
@@ -8,6 +8,8 @@ NEXT_PUBLIC_AGI_URL=https://avristgeneral.com
 NEXT_PUBLIC_AVRAM_URL=https://avrist-am.com
 NEXT_PUBLIC_UPLOAD_FILE_URL=http://stgweb.avristgeneral.com
 NEXT_PUBLIC_REVALIDATE_CACHE=100
+# Google ID
+NEXT_PUBLIC_GOOGLE_ID=G-SK0KEBL2WF
 
 DOCKER_IMAGE_NAME=agi-frontpage-web-uat
 DOCKER_IMAGE_VERSION=latest
