--- a/.env
+++ b/.env
@@ -2,13 +2,10 @@
 NEXT_PUBLIC_ENV=uat
 NEXT_PUBLIC_IMAGE_API=http://stgweb.avristgeneral.com/api-cms/files/get
 NEXT_PUBLIC_PROVIDER_API=https://adev.avrist.com/provider/api/v1/user/providers
-NEXT_PUBLIC_AVRAS_API=http://stgweb.avristgeneral.com/api-front
-NEXT_PUBLIC_AVRAS_URL=http://stgweb.avristgeneral.com
-NEXT_PUBLIC_AGI_URL=https://avristgeneral.com
-NEXT_PUBLIC_AVRAM_URL=https://avrist-am.com
-NEXT_PUBLIC_UPLOAD_FILE_URL=http://stgweb.avristgeneral.com
-NEXT_PUBLIC_REVALIDATE_CACHE=100
-
-DOCKER_IMAGE_NAME=agi-frontpage-web-uat
-DOCKER_IMAGE_VERSION=latest
-DOCKER_PORT=3033
+NEXT_PUBLIC_AVRAS_API=https://api-front-sit.avristcms.barito.tech
+NEXT_PUBLIC_AVRAS_URL=http://front-sit.avristcms.barito.tech
+NEXT_PUBLIC_AGI_URL=http://front-sit-agi.avristcms.barito.tech
+NEXT_PUBLIC_AVRAM_URL=http://front-sit-avram.avristcms.barito.tech
+NEXT_PUBLIC_UPLOAD_FILE_URL=https://api-admin-sit.avristcms.barito.tech
+# Google ID
+NEXT_PUBLIC_GOOGLE_ID=G-SK0KEBL2WF
