ACW2-0000: update to version 1.1.5

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   agi-frontpage-web:
     container_name: agi-frontpage-web-app
-    image: agi-frontpage-web
+    image:  ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_VERSION}
     build:
       context: .
       dockerfile: Dockerfile
